tests/build/cases/widget/widget_new_with_error1.stderr
error: cannot remove, property `id` is captured in inherited fn `new`
 --> $DIR/widget_new_with_error1.rs:7:18
  |
7 |         remove { id }
  |                  ^^

error[E0433]: failed to resolve: could not find `__widget_macro` in `test_widget`
  --> $DIR/widget_new_with_error1.rs:3:1
   |
3  | #[widget($crate::test_widget)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `__widget_macro` in `test_widget`
...
13 |     let _ = test_widget!();
   |             -------------- in this macro invocation
   |
   = note: this error originates in the macro `test_widget` (in Nightly builds, run with -Z macro-backtrace for more info)
